--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
-<!DOCTYPE html>
 <html>
-<body>
-
-<h1>welcome</h1>
-<p>to my page.</p>
-
-</body>
+  <head>
+    <tile>document</tile>
+  </head>
+  <body style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+    <H1>
+      Pavanasri
+    </H1>
+    <h2 style="color: rgb(102, 255, 0);">
+      MERN STACK DEVELOPER
+    </h2>
+    <h3>my project</h3>
+    <ol>
+      <li><a href="#">My portfolio</a></li>
+    </ol>
+    <hr>
+    <h3>My Assigmnets</h3>
+    <ol>
+      <li><a href="#">Assingment 1</a></li>
+    </ol>
+  </body>
 </html>
