--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     </h2>
     <h3>my project</h3>
     <ol>
-      <li><a href="#">My portfolio</a></li>
+      <li><a href="p1">My portfolio</a></li>
     </ol>
     <hr>
     <h3>My Assigmnets</h3>
     <ol>
-      <li><a href="#">Assingment 1</a></li>
+      <li><a href="a1">Assingment 1</a></li>
     </ol>
   </body>
 </html>
