--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h3>My Assigmnets</h3>
     <ol>
       <li><a href="a1">Assingment 1</a></li>
+      <li><a href="a2">Assingment 2</a></li>
     </ol>
   </body>
 </html>
