--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <tile>document</tile>
+    <link rel="stylesheet" type="text/css" href="#style.css"/>
   </head>
   <body style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
     <H1>
