--- a/p1/index.html
+++ b/p1/index.html
@@ -30,30 +30,30 @@
              <button class="btn"><a href="#">Know more</a></button>
     </div>
     <div class="box">
-<img src="https://picsum.photos/id/1/367/267"  class="image" alt="Author image" width="400px">
+<img src= "https://thumbs.dreamstime.com/b/cartoon-girl-long-wavy-brown-hair-gray-eyes-working-laptop-illustration-girl-brown-hair-gray-eyes-cartoon-324025232.jpg" class="image" alt="Author image" width="400px">
     </div>
 </div>
         </section>
-       <section class="projects-section" id="projects">
-  <h2>PROJECTS</h2>
-  <div class="projects-container">
-    <div class="project-box">
-      <h3 style="text-align: center;">PROJECT 1</h3>
-      <p style="text-align: center;">some description</p>
-      <button  ><a href="A1"> View Demo</a> </button>
-    </div>
-    <div class="project-box">
-      <h3 style="text-align: center;">PROJECT 2</h3>
-      <p style="text-align: center;" >some description</p>
-      <button ><a href="A1">View Demo</a></button>
-    </div>
-    <div class="project-box">
-      <h3 style="text-align: center;">PROJECT 3</h3>
-      <p style="text-align: center;">some description</p>
-      <button ><a href="A1">View Demo</a></button>
-    </div>
-  </div>
-</section>
+      <section id="projects">
+        <h2 class="projects-heading">Projects</h2>
+        <div class="projects-container">
+          <div class="project-card">
+            <h3>Project 1</h3>
+            <p>A small project on HTML Tags</p>
+            <a href="../a1/index.html" class="project-link">View Project</a>
+          </div>
+          <div class="project-card">
+            <h3>Project 2</h3>
+            <p>Image Display</p>
+            <a href="../a2/index.html" class="project-link">View Project</a>
+          </div>
+          <div class="project-card">
+            <h3>Project 3</h3>
+            <p>Demonstrating login page</p>
+            <a href="../a4/index.html" class="project-link">View Project</a>
+          </div>
+        </div>
+      </section>
 <!-- SERVICES SECTION -->
 <section id="services" class="services-section">
   <h2 class="section-title">My Services</h2>
