--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="a3">Assingment 3</a></li>
       <li><a href="a4">Assingment 4</a></li>
        <li><a href="a5">Assingment 5</a></li>
+        <li><a href="a6">Assingment 6</a></li>
     </ol>
   </body>
 </html>
