--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href="a4">Assingment 4</a></li>
        <li><a href="a5">Assingment 5</a></li>
         <li><a href="a6">Assingment 6</a></li>
+        <li><a href="a7">Assingment 7</a></li>
     </ol>
   </body>
 </html>
