--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
        <li><a href="a5">Assingment 5</a></li>
         <li><a href="a6">Assingment 6</a></li>
         <li><a href="a7">Assingment 7</a></li>
+        <li><a href="a8">Assingment 8</a></li>
     </ol>
   </body>
 </html>
