--- a/index.html
+++ b/index.html
@@ -1,36 +1,117 @@
-<html>
-  <head>
-    <tile>document</tile>
-    <link rel="stylesheet" type="text/css" href="#style.css"/>
-  </head>
-  <body style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
-    <H1>
-      Pavanasri
-    </H1>
-    <h2 style="color: rgb(255, 0, 179);">
-      MERN STACK DEVELOPER
-    </h2>
-    <h3>my project</h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pavanasri | MERN Developer</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #fdfcfb, #c08fd4);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .container {
+      background: #c08fd0;
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+      padding: 25px 20px;
+      max-width: 400px;
+      width: 90%;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 1.8em;
+      margin-bottom: 5px;
+      color: #58247d;
+    }
+
+    h2 {
+      font-size: 1.1em;
+      font-weight: 400;
+      color: #f9f6fc;
+      margin-bottom: 15px;
+    }
+
+    h3 {
+      font-size: 1em;
+      margin: 15px 0 8px;
+      color: #8229b9;
+      border-bottom: 1px dashed #ccc;
+      display: inline-block;
+      padding-bottom: 3px;
+    }
+
+    ol {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    li {
+      margin: 8px 0;
+    }
+
+    a {
+      text-decoration: none;
+      font-size: 0.95em;
+      color: #9329b9;
+      background-color: #ecf0f1;
+      padding: 6px 16px;
+      border-radius: 20px;
+      transition: all 0.3s ease;
+      display: inline-block;
+    }
+
+    a:hover {
+      background-color: #9029b9;
+      color: white;
+    }
+
+    hr {
+      margin: 20px 0;
+      border: none;
+      height: 1px;
+      background-color: #ddd;
+      width: 75%;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Pavanasri</h1>
+    <h2>MERN STACK DEVELOPER</h2>
+
+    <h3>MY PROJECTS</h3>
     <ol>
-      <li><a href="p1">My portfolio</a></li>
+      <li><a href="p1">MY PORTFOLIO</a></li>
     </ol>
-    <hr>
-    <h3>My Assigmnets</h3>
+
+    <hr />
+
+    <h3>MY ASSIGNMENTS</h3>
     <ol>
-      <li><a href="a1">Assingment 1</a></li>
-      <li><a href="a2">Assingment 2</a></li>
-      <li><a href="a3">Assingment 3</a></li>
-      <li><a href="a4">Assingment 4</a></li>
-       <li><a href="a5">Assingment 5</a></li>
-        <li><a href="a6">Assingment 6</a></li>
-        <li><a href="a7">Assingment 7</a></li>
-        <li><a href="a8">Assingment 8</a></li>
-        <li><a href="a9">Assingment 9</a></li>
-        <li><a href="a10">Assingment 10</a></li>
-        <li><a href="a11">Assingment 11</a></li>
-        <li><a href="a12">Assingment 12</a></li>
-        <li><a href="a13">Assingment 13</a></li>
-        <li><a href="a14">Assingment 14</a></li>
+      <li><a href="A1">ASSIGNMENT 1</a></li>
+      <li><a href="a2">ASSIGNMENT 2</a></li>
+      <li><a href="a3">ASSIGNMENT 3</a></li>
+      <li><a href="a4">ASSIGNMENT 4</a></li>
+      <li><a href="a5">ASSIGNMENT 5</a></li>
+      <li><a href="a6">ASSIGNMENT 6</a></li>
+      <li><a href="a7">ASSIGNMENT 7</a></li>
+      <li><a href="a8">ASSIGNMENT 8</a></li>
+        <li><a href="a9">ASSIGNMENT 9</a></li>
+          <li><a href="a10">ASSIGNMENT 10</a></li>
+       <li><a href="a11">ASSIGNMENT 11</a></li>
+         <li><a href="a12">ASSIGNMENT 12</a></li>
+           <li><a href="a13">ASSIGNMENT 13</a></li>
+              <li><a href="a14">ASSIGNMENT 14</a></li>
     </ol>
-  </body>
+  </div>
+</body>
 </html>
