--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
          <li><a href="a12">ASSIGNMENT 12</a></li>
            <li><a href="a13">ASSIGNMENT 13</a></li>
               <li><a href="a14">ASSIGNMENT 14</a></li>
+              <li><a href="a15">ASSIGNMENT 15</a></li>
+              <li><a href="a16">ASSIGNMENT 16</a></li>
+              <li><a href="a17">ASSIGNMENT 17</a></li>
+              <li><a href="a18">ASSIGNMENT 18</a></li>
     </ol>
   </div>
 </body>
