--- a/food-mart/index.html
+++ b/food-mart/index.html
@@ -1,167 +1,339 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FoodMart Grocery Store</title>
-  <link rel="stylesheet" href="style.css">
-  <!-- Google Fonts Example -->
-  <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <!-- Header -->
-  <header>
-    <div class="container header-flex">
-      <div class="logo"><img src="../food-mart/images/logo.png" alt="Smoothie"></div>
-      <nav>
-        <ul>
-          <li><a href="#">Shop by Departments</a></li>
-          <li><a href="#">Women</a></li>
-          <li><a href="#">Men</a></li>
-          <li><a href="#">Kids</a></li>
-          <li><a href="#">Accessories</a></li>
-          <li><a href="#">Pages</a></li>
-          <li><a href="#">Brand</a></li>
-          <li><a href="#">Sale</a></li>
-          <li><a href="#">Blog</a></li>
-        </ul>
-      </nav>
-      <div class="header-actions">
-        <span>Support: +980-34984089</span>
-        <span>Your Cart: $1290.00</span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="navbar">
+        <img src="images/logo.png" alt="logo" width="200px" />
+        <div class="search-container">
+          <select style="color: gray">
+            <option>All Categories</option>
+            <option>Smoothies </option>
+            <option>juices</option>
+            <option>veggies </option>
+            <option>Fruits </option>
+            <option>Honey</option>
+            <option>wine</option>
+            <option>Non-veg</option>
+            <option>herbs </option>
+            <option>Baked products</option>
+            <option>Sweets</option>
+          </select>
+          <input
+            class="search-input"
+            type="text"
+            placeholder="search here"
+          />
+          <span class="search-icon">&#128269;</span>
+        </div>
+        <div class="contact">
+          <h4 style="color: gray">For Support?</h4>
+          <h3>+91-8306309059</h3>
+        </div>
+        <div class="cart">
+          <h4 style="color: gray">Your Cart ▾</h4>
+          <h3>₹1090.00</h3>
+        </div>
       </div>
-    </div>
-    <div class="search-bar">
-      <select>
-        <option>All Categories</option>
-        <!-- Add more categories -->
-      </select>
-      <input type="text" placeholder="Search for more than 20,000 products">
-      <button>Search</button>
-    </div>
-  </header>
+    </header>
+    <main>
+      <section class="departments">
+        <select style="color: gray">
+          <option>Shop by Departments</option>
+          <option>Smoothies </option>
+            <option>juices</option>
+            <option>veggies </option>
+            <option>Fruits </option>
+            <option>Honey</option>
+            <option>wine</option>
+            <option>Non-veg</option>
+            <option>herbs </option>
+            <option>Baked products</option>
+            <option>Sweets</option>
+        </select>
+        <div class="menu" style="color: gray">
+          <span>Women</span>
+          <span>Men</span>
+          <span>Kids</span>
+          <span>Accessories</span>
+          <span>Pages▾</span>
+          <span>Brand</span>
+          <span>Sale</span>
+          <span>Blog</span>
+        </div>
+      </section>
+      <section class="ads">
+        <div class="left-ad">
+          <h4>100% Natural</h4>
+          <h1>
+            Fresh Smoothie <br />
+            & Summer Juice
+          </h1>
+          <p>
+            Buy these smoothies and juices which are natural <br />
+            and freshly made from organic fruits.
+          </p>
+          <button onclick="this.style.backgroundColor='green';this.style.color='white'">Shop Now</button>
+          <img src="images/product-thumb-1.png" alt="juice" />
+          <div class="carousel-dots">
+            <span class="dot active"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+          </div>
+        </div>
 
-  <!-- Banner Section -->
-  <section class="banner">
-    <div class="banner-main">
-      <h3>100% Natural</h3>
-      <h1>Fresh Smoothie & Summer Juice</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-      <button>Shop Now</button>
-      <img src="../food-mart/images/product-thumb-1.png" alt="Smoothie">
+        <div class="right-ads">
+          <div class="ad-box green">
+            <h2>20% Off</h2>
+            <p class="sale">-- SALE</p>
+            <h3>Fruits & Vegetables</h3>
+            <a href="#">Shop Collection →</a>
+            <img src="images/ad-image-1.png" alt="veggie" />
+          </div>
+          <div class="ad-box peach">
+            <h2>15% Off</h2>
+            <p class="sale">-- SALE</p>
+            <h3>Baked Products</h3>
+            <a href="#">Shop Collection →</a>
+            <img src="images/ad-image-2.png" alt="baked" />
+          </div>
+        </div>
+      </section>
+      <section class="category-section">
+        <div class="category-header">
+          <h2><b>CATEGORY</b></h2>
+          <div class="view-all"> 
+            <button>&lt;</button>
+            <button>&gt;</button>
+          </div>
+        </div>
 
+        <div class="category-grid">
+          <div class="category-card">
+            <img
+              src="images/icon-vegetables-broccoli.png"
+              alt="Fruits & Veges"
+            />
+            <p>Fruits & Veges</p>
+          </div>
+          <div class="category-card">
+            <img src="images/icon-bread-baguette.png" alt="Breads & Sweets" />
+            <p>Breads & Sweets</p>
+          </div>
+          <div class="category-card">
+            <img
+              src="images/icon-soft-drinks-bottle.png"
+              alt="Fruits & Veges"
+            />
+            <p>Soft drinks</p>
+          </div>
+          <div class="category-card">
+            <img src="images/icon-wine-glass-bottle.png" alt="Fruits & Veges" />
+            <p>Wine</p>
+          </div>
+          <div class="category-card">
+            <img
+              src="images/icon-animal-products-drumsticks.png"
+              alt="Fruits & Veges"
+            />
+            <p>Non-veg</p>
+          </div>
+          <div class="category-card">
+            <img src="images/icon-bread-herb-flour.png" alt="Fruits & Veges" />
+            <p>Herbs</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="newly-arrived-section">
+        <div class="container">
+          <div class="header">
+            <h2>Newly Arrived</h2>
+            <span class="categories-link">View All Categories →</span>
+          </div>
+
+          <div class="cards">
+            <div class="card">
+              <img src="images/ad-image-3.jpg" alt="product 1"/>
+              <div class="title">sweet SugarNest</div>
+              <div class="description">where every bite feels like home</div>
+            </div>
+            <div class="card">
+              <img src="images/ad-image-4.jpg" alt="Product 2" />
+              <div class="title">Scoop Chillwhirl</div>
+              <div class="description">Every scoop tells a story</div>
+            </div>
+            <div class="card">
+              <img src="images/thumb-orange-juice.jpg" alt="Product 3" />
+              <div class="title">laza orange juice</div>
+              <div class="description">Fresh juice you wish to get</div>
+            </div>
+            <div class="card">
+              <img src="images/thumb-junk.jpg" alt="Product 4" />
+              <div class="title">Snacks pack</div>
+              <div class="description">Crunchy snacks yummy yummy</div>
+            </div>
+            <div class="card">
+              <img src="images/product-thumb-11.jpg" alt="Product 5" />
+              <div class="title">honey GoldenDrip</div>
+              <div class="description">pure gold in every drop</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="trending-products">
+        <div class="container">
+          <div class="section-header">
+            <h2>Trending Products</h2>
+            <div class="filters">
+              <span class="filter active">All</span>
+              <span class="filter">Fruits & Veggies</span>
+              <span class="filter">Juices</span>
+            </div>
+          </div>
+
+          <div class="product-grid">
+            <div class="product-card">
+              <div class="discount-badge">-30%</div>
+              <div class="favorite">&#9825;</div>
+              <img src="images/thumb-bananas.png" alt="Product" />
+              <h4>Sunstar Fresh Bananas</h4>
+              <p class="unit">1 UNIT <span class="rating">⭐ 4.7</span></p>
+              <p class="price">₹30.00</p>
+            </div>
+
+            <div class="product-card">
+              <div class="discount-badge">-20%</div>
+              <div class="favorite">&#9825;</div>
+              <img src="images/thumb-biscuits.png" alt="Product" />
+              <h4>Sunstar Fresh Biscuits</h4>
+              <p class="unit">1 UNIT <span class="rating">⭐ 4.8</span></p>
+              <p class="price">₹60.00</p>
+            </div>
+
+            <div class="product-card">
+              <div class="favorite">&#9825;</div>
+              <div class="discount-badge">-10%</div>
+              <img src="images/thumb-cucumber.png" alt="Product" />
+              <h4>Sunstar Fresh Cucumber</h4>
+              <p class="unit">1 UNIT <span class="rating">⭐ 4.7</span></p>
+              <p class="price">₹30.00</p>
+            </div>
+
+            <div class="product-card">
+             <div class="discount-badge">-10%</div>
+              <div class="favorite">&#9825;</div>
+              <img src="images/thumb-milk.png" alt="Product" />
+              <h4>Sunstar Fresh Milk</h4>
+              <p class="unit">1 UNIT <span class="rating">⭐ 4.5</span></p>
+              <p class="price">₹20.00</p>
+            </div>
+
+            <div class="product-card">
+              <div class="discount-badge">-10%</div>
+             <div class="favorite">&#9825;</div>
+              <img src="images/thumb-raspberries.png" alt="Product" />
+              <h4>Sunstar Fresh Raspberries</h4>
+              <p class="unit">1 UNIT <span class="rating">⭐ 4.4</span></p>
+              <p class="price">₹80.00</p>
+            </div>
+
+            <div class="product-card">
+              <div class="favorite">&#9825;</div>
+              <img src="images/thumb-tomatoketchup.png" alt="Product" />
+              <h4>Sunstar Fresh Tomato ketchup</h4>
+              <p class="unit">1 UNIT <span class="rating">⭐ 4.6</span></p>
+              <p class="price">₹80.00</p>
+            </div>
+
+            <div class="product-card">
+              <div class="favorite">&#9825;</div>
+              <img src="images/thumb-tomatoes.png" alt="Product" />
+              <h4>Sunstar Fresh Tomatoes</h4>
+              <p class="unit">1 UNIT <span class="rating">⭐ 4.3</span></p>
+              <p class="price">₹25.00</p>
+            </div>
+
+            <div class="product-card">
+              <div class="favorite">&#9825;</div>
+              <img src="images/thumb-avocado.png" alt="Product" />
+              <h4>Sunstar Fresh Avacado Juice</h4>
+              <p class="unit">1 UNIT <span class="rating">⭐ 4.5</span></p>
+              <p class="price">₹90.00</p>
+            </div>
+
+            <div class="product-card">
+              <div class="favorite">&#9825;</div>
+              <img src="images/post-thumb-2.jpg" alt="Product" />
+              <h4>Sunstar Fresh Cashew Butter</h4>
+              <p class="unit">1 UNIT <span class="rating">⭐ 4.9</span></p>
+              <p class="price">₹210.00</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-col logo-social">
+      <img src="images/logo.png" alt="FoodMart Logo" class="logo" />
     </div>
-    <div class="banner-side">
-      <div class="banner-offer">
-        <h4>20% Off</h4>
-        <p>Fruits & Vegetables</p>
-        <a href="#">Shop Collection →</a>
-        
-
-      </div>
-      <div class="banner-offer">
-        <h4>15% Off</h4>
-        <p>Baked Products</p>
-        <a href="#">Shop Collection →</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Categories -->
-  <section class="categories">
-    <h2>Category</h2>
-    <div class="category-list">
-      <div class="category-card"><img src="../food-mart/images/icon-vegetables-broccoli.png" alt="image">Fruits & Veges</div>
-      <div class="category-card"><img src="../food-mart/images/icon-bread-baguette.png">Breads & Sweets</div>
-      <div class="category-card"><img src="../food-mart/images/icon-animal-products-drumsticks.png">Fruits & Veges</div>
-      <div class="category-card"><img src="../food-mart/images/icon-soft-drinks-bottle.png">Fruits & Veges</div>
-      <div class="category-card"><img src="../food-mart/images/icon-wine-glass-bottle.png">Fruits & Veges</div>
-
-    </div>
-  </section>
-
-  <!-- Newly Arrived Brands -->
-  <section class="brands">
-    <h2>Newly Arrived Brands</h2>
-    <div class="brand-list">
-      <div class="brand-card"><img src="../food-mart/images/product-thumb-11.jpg" width="200px">Amber Jar<br>Honey best nectar you wish to get</div>
-      <div class="brand-card"><img src="../food-mart/images/product-thumb-12.jpg" width="200px">Amber Jar<br>Honey best nectar you wish to get</div>
-      <div class="brand-card"><img src="../food-mart/images/product-thumb-13.jpg" width="200px">Amber Jar<br>Honey best nectar you wish to get</div>
-      <div class="brand-card"><img src="../food-mart/images/product-thumb-14.jpg" width="200px">Amber Jar<br>Honey best nectar you wish to get</div>
-    </div>
-  </section>
-
-  <!-- Trending Products -->
-  <section class="products">
-    <h2>Trending Products</h2>
-    <div class="product-tabs">
-      <button class="active">All</button>
-      <button>Fruits & Veges</button>
-      <button>Juices</button>
-    </div>
-    <div class="product-grid">
-      <!-- Repeat this block for each product -->
-      <div class="product-card">
-      <img src="../food-mart/images/thumb-bananas.png" width="400px">
-        <h3>Sunstar Fresh Melon Juice</h3>
-        <span>$18.00</span>
-        <span>4.5 ★</span>
-      </div>
-      <div class="product-card">
-      <img src="../food-mart/images/thumb-biscuits.png" width="400px">
-        <h3>Sunstar Fresh Melon Juice</h3>
-        <span>$18.00</span>
-        <span>4.5 ★</span>
-      </div>
-      <div class="product-card">
-      <img src="../food-mart/images/thumb-avocado.png" width="400px">
-        <h3>Sunstar Fresh Melon Juice</h3>
-        <span>$18.00</span>
-        <span>4.5 ★</span>
-      </div>
-      <!-- ... -->
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <div class="footer-top">
-      <div class="footer-logo">FOODMART</div>
-      <div class="footer-links">
-        <div>
+   <div class="footer-col">
           <h4>Ultras</h4>
           <ul>
-            <li>About us</li>
-            <li>Conditions</li>
-            <li>Our Journals</li>
-            <li>Careers</li>
-            <li>Affiliate Programme</li>
-            <li>Ultras Press</li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Conditions</a></li>
+            <li><a href="#">Our Journals</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Affiliate Programme</a></li>
+            <li><a href="#">Ultras Press</a></li>
           </ul>
         </div>
-        <div>
+
+        <div class="footer-col">
           <h4>Customer Service</h4>
           <ul>
-            <li>FAQ</li>
-            <li>Contact</li>
-            <li>Privacy Policy</li>
-            <li>Returns & Refunds</li>
-            <li>Cookie Guidelines</li>
-            <li>Delivery Information</li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Returns & Refunds</a></li>
+            <li><a href="#">Cookie Guidelines</a></li>
+            <li><a href="#">Delivery Information</a></li>
           </ul>
         </div>
+
+        <div class="footer-col">
+          <h4>Customer Service</h4>
+          <ul>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Returns & Refunds</a></li>
+            <li><a href="#">Cookie Guidelines</a></li>
+            <li><a href="#">Delivery Information</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-col subscribe">
+          <h4>Subscribe Us</h4>
+          <p>
+            Subscribe to our newsletter to get updates about our grand offers.
+          </p>
+          <form class="subscribe-form">
+            <input type="email" placeholder="Email Address" required />
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
       </div>
-      <div class="footer-subscribe">
-        <h4>Subscribe Us</h4>
-        <form>
-          <input type="email" placeholder="Email Address">
-          <button>Subscribe</button>
-        </form>
+
+      <div class="footer-bottom">
+        <p>&copy; 2025 Foodmart. All rights reserved.</p>
       </div>
-    </div>
-    <div class="footer-bottom">
-      <span>© 2023 Foodmart. All rights reserved.</span>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
