--- a/p1/index.html
+++ b/p1/index.html
@@ -49,8 +49,8 @@
           </div>
           <div class="project-card">
             <h3>Project 3</h3>
-            <p>Demonstrating login page</p>
-            <a href="../a4/index.html" class="project-link">View Project</a>
+            <p>BANK ATM</p>
+            <a href="../bank atm/index.html" class="project-link">View Project</a>
           </div>
         </div>
       </section>
