--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <h3>MY PROJECTS</h3>
     <ol>
       <li><a href="p1">MY PORTFOLIO</a></li>
+      <li><a href="p3">MY PORTFOLIO 2</a></li>
     </ol>
 
     <hr />
