--- a/p3/index.html
+++ b/p3/index.html
@@ -61,7 +61,7 @@
     <div class="row g-4">
       <div class="col-md-6" data-aos="zoom-in">
         <div class="card h-100 shadow">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTE3p3yVs1M0pTseaNkTJxbfpgfiFDCgHO1ag&s" class="card-img-top" alt="Project One">
+          <img src="https://th.bing.com/th/id/OIP.dhl6GgCTFoxtmxHDDwAu4wHaE7?rs=1&pid=ImgDetMain" class="card-img-top" alt="Project One">
           <div class="card-body">
             <h5 class="card-title">Project One</h5>
             <p class="card-text">A responsive landing page built with HTML, CSS, and JavaScript for a startup product.</p>
@@ -70,7 +70,7 @@
       </div>
       <div class="col-md-6" data-aos="zoom-in" data-aos-delay="100">
         <div class="card h-100 shadow">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvdVwMPINlsz4Ch4CrRnLwMZ6srR6mVU2mmQ&s" class="card-img-top" alt="Project Two">
+          <img src="https://static.vecteezy.com/system/resources/previews/021/813/777/large_2x/group-of-female-professionals-choosing-different-occupations-in-the-work-field-photo.jpg" class="card-img-top" alt="Project Two">
           <div class="card-body">
             <h5 class="card-title">Project Two</h5>
             <p class="card-text">An interactive portfolio showcasing animations, smooth scroll, and modern UI components.</p>
