--- a/project/index.html
+++ b/project/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://gcet-react-app-neon.vercel.app/" >my store</a>
+    <a href="https://gcet-react-app-blush.vercel.app/" >my store</a>
 </body>
 </html>
