--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <ol>
       <li><a href="p1">MY PORTFOLIO</a></li>
       <li><a href="p3">MY PORTFOLIO 2</a></li>
+      <li><a href="https://react-lessons-tau-seven.vercel.app/">REACT LESSONS</a></li>
     </ol>
 
     <hr />
