--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <li><a href="p1">MY PORTFOLIO</a></li>
       <li><a href="p3">MY PORTFOLIO 2</a></li>
       <li><a href="https://react-lessons-tau-seven.vercel.app/">REACT LESSONS</a></li>
-       <li><a href="https://gcet-react-app-neon.vercel.app/" >my online store</a></li>
+       <li><a href="https://gcet-react-app-blush.vercel.app/login" >my online store</a></li>
       <li><a href="api" target="_blank">Node js</a></li>
     </ol>
 
